--- a/frontend/forum/package.json
+++ b/frontend/forum/package.json
@@ -16,7 +16,7 @@
     "vue-datepicker": "^1.3.0",
     "vue-material-datepicker": "^2.0.1",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.4.0",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
