--- a/frontend/forum/package.json
+++ b/frontend/forum/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "d3": "^7.2.1",
+    "moment": "^2.29.1",
     "stylus": "^0.56.0",
     "stylus-loader": "^6.2.0",
     "vue": "^2.6.11",
